# ai-assurance-mvp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  COMPLETION_SUMMARY.md  DECISIONS.md  DELIVERY.txt  DEPLOYMENT.md  ENTERPRISE_ARCHITECTURE.md  IMPLEMENTATION.md  QUICK_START.md  README.md  __version__.py  adversarial.py  audit.py  claude_chat_to_code_workflow.md  complete_implementation_guide.html  dashboard.py  demo.py  diagram_generation_guide.md  domains.py  encryption.py  eval_suite.py  evaluator.py  langfuse_wrapper.py  legacy_guardrails.py  migrate.py  mock_data.py  models.py  multi_domain_demo.py  observability_compat.py  pdf_report.py  pytest.ini  ragas_evaluator.py  report.py  requirements-deploy.txt  requirements-dev.txt  requirements.txt  (+9 more)
.deepeval/: .deepeval_telemetry.txt
agents/: __init__.py  _registry.py
agents/azure-architect/: .env.example  .gitignore  CHANGELOG.md  EXCEPTIONS.md  POC-RETROSPECTIVE.md  README.md  SECURITY.md  agent.py  prompts.py  pyproject.toml
agents/azure-architect/eval/: dataset.jsonl  mermaid_compiles_metric.py  run_eval.py
agents/azure-architect/examples/: .gitkeep
agents/azure-architect/policies/: azure-architect.rego
agents/azure-architect/prompts/: per_resource.md  system.md
agents/azure-architect/tools/: __init__.py  arm_read.py  mermaid_render.py  schemas.py
api/: _errors.py  _models.py  adversarial.py  agent_bindings.py  agent_notifications.py  agent_runner.py  agent_runs.py  agents.py  ai_system_edit.py  analytics.py  assessment.py  assurance_model.py  audit_verify.py  auth_oidc.py  aws_demo.py  batch.py  connectors.py  demo.py  demo_control.py  demo_run.py  domains_api.py  eval_suites.py  evals.py  evals_v2.py  evaluate.py  evidence.py  findings_v2.py  framework.py  frameworks.py  grc.py  guide.py  intake.py  memory.py  metrics.py  policies_rego.py  projection.py  (+11 more)
cli/: README.md  pyproject.toml
cli/sl/: __init__.py  __main__.py  auth.py  cmd_eval.py  cmd_evidence.py  cmd_gate.py  cmd_login.py  cmd_onboard.py  cmd_trace.py  config.py  main.py
sdk/: README.md  publish.ps1  pyproject.toml
sdk/examples/: billing_agent.py
sdk/signallayer/: __init__.py  client.py  decorators.py  errors.py  order_guard.py
(+540 files in other folders)
