[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signallayer"
version = "0.1.0"
description = "SignalLayer AI Assurance Platform — Python SDK"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "SignalLayer", email = "praveen@signallayer.ai" },
]
keywords = ["ai-assurance", "llm-observability", "policy-engine", "guardrails"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["signallayer"]

[tool.hatch.build.targets.sdist]
include = [
    "signallayer/",
    "README.md",
    "pyproject.toml",
]
